--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
   font-family: Roboto;
 }
 
+.head {
+  background: -webkit-gradient(linear, left top, left bottom, from(#e3ebff), to(white));
+  background: linear-gradient(180deg, #e3ebff 0%, white 100%);
+}
+
 nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -11,22 +16,36 @@ nav {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 10px;
-  background-color: aliceblue;
 }
 
-nav ul {
+nav .links ul {
+  list-style-type: none;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  list-style: none;
 }
 
-nav ul li {
-  padding: 1rem;
+nav .links ul li {
+  margin-left: 50px;
+}
+
+nav .links ul li:hover ul {
+  display: block;
+  position: absolute;
+}
+
+nav .links ul li:hover {
+  color: red;
+}
+
+nav .links ul ul {
+  display: none;
+}
+
+nav .links ul ul li {
+  font-size: 0.9rem;
+  padding-top: 15px;
+  margin: 0;
 }
 
 button {
