--- a/style/style.scss
+++ b/style/style.scss
@@ -2,6 +2,7 @@
 	padding: 0;
 	margin: 0;
 	font-family: Assistant;
+	box-sizing: border-box;
 }
 html {
 	font-size: 14px;
@@ -54,265 +55,6 @@ $darkBlue: #192057;
 		color: $softBlue;
 	}
 }
-
-hero {
-	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-	padding: 5% 10%;
-
-	.graphic {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-	}
-	.title-hero {
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		font-size: 2em;
-		line-height: 1.1;
-		color: $blue;
-
-		p {
-			color: $softBlue;
-			font-size: 0.9em;
-			font-weight: 300;
-			margin: 15px 0 15px 0;
-		}
-
-		.btns {
-			button {
-				@include btn;
-				background-color: $blue;
-			}
-
-			.outlinedBtn {
-				@include btn-outlined;
-				color: $blue;
-			}
-		}
-	}
-}
-
-.typed-cursor {
-	color: $blue;
-}
-
-intro {
-	@include section;
-	background-color: $lightBlue;
-
-	.first {
-		display: grid;
-		grid-auto-flow: dense;
-		grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-
-		.text {
-			color: $softBlue;
-			display: flex;
-			padding-left: 15px;
-			line-height: 1.5;
-			flex-direction: column;
-			justify-content: center;
-			h1 {
-				padding-bottom: 10px;
-				color: $blue;
-			}
-		}
-		.graphic {
-			padding-right: 15px;
-			img {
-				width: 85%;
-			}
-		}
-	}
-}
-
-benefits {
-	@include section;
-	background-image: url("../assets/logoBack.png");
-	background-size: contain;
-	background-repeat: no-repeat;
-	background-position: right bottom;
-
-	.cards {
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: center;
-		.card {
-			@include card-style;
-			width: 400px;
-			img {
-				width: 100%;
-				height: auto;
-			}
-			.content {
-				h3 {
-					padding-bottom: 10px;
-					color: $blue;
-				}
-				p {
-					color: $softBlue;
-				}
-			}
-		}
-	}
-}
-
-partners {
-	@include section;
-	background-color: $lightBlue;
-	img {
-		width: 70%;
-		height: auto;
-	}
-
-	.cards {
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: center;
-
-		.card {
-			@include card-style;
-			flex-direction: column;
-			width: 350px;
-			justify-content: center;
-
-			h3 {
-				color: $blue;
-				padding-top: 10px;
-			}
-			p {
-				color: $softBlue;
-			}
-		}
-	}
-}
-
-process {
-	@include section;
-	img {
-		width: 100%;
-		height: auto;
-	}
-
-	.cards {
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: center;
-		.card {
-			@include card-style;
-			flex-direction: column;
-			width: 210px;
-			text-align: center;
-			.content {
-				h3 {
-					color: $blue;
-					padding-bottom: 10px;
-				}
-				p {
-					color: $softBlue;
-				}
-			}
-		}
-	}
-}
-
-contact {
-	@include section;
-	align-items: center;
-	background-color: $blue;
-	.title {
-		color: white !important;
-	}
-	.contact-form {
-		input {
-			padding: 13px;
-		}
-
-		button {
-			@include btn;
-			background-color: $darkBlue;
-		}
-	}
-	.social ul {
-		margin-top: 45px;
-		display: flex;
-		list-style: none;
-		li {
-			padding: 10px;
-		}
-	}
-}
-footer {
-	display: flex;
-	flex-wrap: wrap;
-	padding: 5% 15%;
-	color: white;
-	justify-content: space-between;
-	background-color: $darkBlue;
-	.cta {
-		.company-intro {
-			margin: 15px 0;
-			line-height: 1.5;
-		}
-		button {
-			@include btn-outlined;
-			color: white;
-		}
-	}
-
-	.links {
-		h4 {
-			color: $blue;
-		}
-		ul {
-			list-style: none;
-			li {
-				padding: 5px 0;
-				a {
-					color: white;
-					text-decoration: none;
-				}
-			}
-		}
-	}
-}
-
-.copyright {
-	width: 100%;
-	padding: 10px;
-	text-align: center;
-	color: white;
-	background-color: black;
-}
-
-@media only screen and (max-width: 786px) {
-	hero .title {
-		font-size: 1.5em;
-	}
-	.nav .links ul {
-		display: none !important;
-	}
-	.nav {
-		padding: 5% !important;
-	}
-	hero {
-		padding: 5% !important;
-	}
-	#nav-icon {
-		display: block;
-	}
-
-	.title-hero {
-		text-align: center;
-	}
-
-	footer {
-		text-align: center;
-	}
-}
-
 #nav-icon {
 	display: none;
 }
@@ -390,20 +132,12 @@ footer {
 	left: 50%;
 }
 
-.open-panel {
-	display: block !important;
-}
-
 .mobile-panel {
-	position: absolute;
-	top: 0;
-	margin-top: 80px;
+	display: flex;
 	width: 100%;
 	height: 100vh;
-	background-color: rgba(255, 255, 255, 0.895);
-	display: flex;
-	display: none;
 	justify-content: center;
+	z-index: 999;
 	ul {
 		a {
 			text-decoration: none;
@@ -411,7 +145,7 @@ footer {
 		text-align: center;
 		li {
 			list-style-type: none;
-			font-size: 2em;
+			font-size: 1.6em;
 			padding: 5px;
 			font-weight: 700;
 			ul li {
@@ -423,12 +157,19 @@ footer {
 }
 
 .header {
+	position: fixed;
+	background-color: rgba(255, 255, 255, 0.945);
+	top: 0;
+	width: 100%;
+	z-index: 999;
+
 	.nav {
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
 		padding: 2% 10%;
 		font-size: 1.2em;
+
 		.links {
 			color: $blue;
 			a {
@@ -485,6 +226,324 @@ footer {
 						}
 					}
 				}
+			}
+		}
+	}
+}
+
+hero {
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+	padding: 8% 10%;
+
+	.graphic {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		img {
+			width: 100%;
+			height: auto;
+		}
+		.gif {
+			position: relative;
+		}
+		.static {
+			position: absolute;
+
+			width: 300px;
+		}
+	}
+	.title-hero {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		font-size: 2em;
+		line-height: 1.1;
+		color: $blue;
+
+		p {
+			color: $softBlue;
+			font-size: 0.9em;
+			font-weight: 300;
+			margin: 15px 0 15px 0;
+		}
+
+		.btns {
+			button {
+				@include btn;
+				background-color: $blue;
+			}
+
+			.outlinedBtn {
+				@include btn-outlined;
+				color: $blue;
+			}
+		}
+	}
+}
+
+.typed-cursor {
+	color: $blue;
+}
+
+intro {
+	@include section;
+	background-color: $lightBlue;
+
+	.first {
+		display: grid;
+		grid-auto-flow: dense;
+		grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+
+		.text {
+			color: $softBlue;
+			display: flex;
+			padding-left: 15px;
+			line-height: 1.5;
+			flex-direction: column;
+			justify-content: center;
+			h1 {
+				padding-bottom: 10px;
+				color: $blue;
+			}
+		}
+		.graphic {
+			padding-right: 15px;
+			img {
+				width: 85%;
+			}
+		}
+	}
+}
+
+benefits {
+	@include section;
+	background-image: url("../assets/logoBack.png");
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: right bottom;
+
+	.cards {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+
+		.card {
+			@include card-style;
+			width: 400px;
+			transition: 300ms ease-in-out;
+			&:hover {
+				transform: translateY(-8px);
+				box-shadow: 0 5px 40px 0 rgba(0, 0, 0, 0.19);
+			}
+			img {
+				width: 100%;
+				height: auto;
+			}
+			.content {
+				h3 {
+					padding-bottom: 10px;
+					color: $blue;
+				}
+				p {
+					color: $softBlue;
+				}
+			}
+		}
+	}
+}
+
+partners {
+	@include section;
+	background-color: $lightBlue;
+	img {
+		width: 70%;
+		height: auto;
+	}
+
+	.cards {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+
+		.card {
+			@include card-style;
+			flex-direction: column;
+			width: 350px;
+			justify-content: center;
+			transition: 300ms ease-in-out;
+			&:hover {
+				transform: translateY(-8px);
+				box-shadow: 0 5px 40px 0 rgba(0, 0, 0, 0.19);
+			}
+
+			h3 {
+				color: $blue;
+				padding-top: 10px;
+			}
+			p {
+				color: $softBlue;
+			}
+		}
+	}
+}
+
+process {
+	@include section;
+	img {
+		width: 100%;
+		height: auto;
+	}
+
+	.cards {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		.card {
+			@include card-style;
+			flex-direction: column;
+			width: 210px;
+			text-align: center;
+			transition: 300ms ease-in-out;
+			&:hover {
+				transform: translateY(-8px);
+				box-shadow: 0 5px 40px 0 rgba(0, 0, 0, 0.19);
+			}
+			.content {
+				h3 {
+					color: $blue;
+					padding-bottom: 10px;
+				}
+				p {
+					color: $softBlue;
+				}
+			}
+		}
+	}
+}
+
+contact {
+	@include section;
+	align-items: center;
+	background-color: $blue;
+	.title {
+		color: white !important;
+	}
+	.contact-form {
+		width: 100%;
+		form {
+			display: flex;
+			justify-content: center;
+		}
+		input {
+			padding-left: 15px;
+			border: none;
+			border-radius: 5px;
+			margin-right: 5px;
+			width: 300px;
+		}
+
+		button {
+			@include btn;
+			background-color: $darkBlue;
+			margin: 0;
+		}
+	}
+	.social ul {
+		margin-top: 45px;
+		display: flex;
+		list-style: none;
+		li {
+			padding: 10px;
+			transition: 100ms ease-in-out;
+			&:hover {
+				transform: translateY(-2px);
+			}
+		}
+	}
+}
+footer {
+	display: flex;
+	flex-wrap: wrap;
+	padding: 5% 15%;
+	color: white;
+	justify-content: space-between;
+	background-color: $darkBlue;
+	.cta {
+		.company-intro {
+			margin: 15px 0;
+			line-height: 1.5;
+		}
+		button {
+			@include btn-outlined;
+			color: white;
+		}
+	}
+
+	.links {
+		h4 {
+			color: $blue;
+		}
+		ul {
+			list-style: none;
+			li {
+				padding: 5px 0;
+				a {
+					color: white;
+					text-decoration: none;
+				}
+			}
+		}
+	}
+}
+
+.copyright {
+	width: 100%;
+	padding: 10px;
+	text-align: center;
+	color: white;
+	background-color: black;
+}
+
+.lock-scroll {
+	overflow-y: hidden;
+}
+
+@media only screen and (max-width: 786px) {
+	hero {
+		padding-top: 25%;
+		.title {
+			font-size: 1.5em;
+		}
+		.btns {
+			margin-bottom: 15px;
+		}
+	}
+	.nav .links ul {
+		display: none !important;
+	}
+	.nav {
+		padding: 5% !important;
+	}
+
+	#nav-icon {
+		display: block;
+	}
+
+	.title-hero {
+		text-align: center;
+	}
+
+	intro {
+		padding: none;
+		margin: none;
+	}
+
+	footer {
+		text-align: center;
+		.cta {
+			button {
+				margin-bottom: 15px;
 			}
 		}
 	}
