--- a/style/style.css
+++ b/style/style.css
@@ -215,9 +215,9 @@ html {
 hero {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(350px, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-  padding: 8% 10%;
+  -ms-grid-columns: (minmax(300px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  padding: 10% 10% 2%;
 }
 
 hero .graphic {
@@ -243,7 +243,7 @@ hero .graphic .gif {
 
 hero .graphic .static {
   position: absolute;
-  width: 300px;
+  width: 20%;
 }
 
 hero .title-hero {
@@ -257,8 +257,8 @@ hero .title-hero {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  font-size: 2em;
-  line-height: 1.1;
+  font-size: 2.4em;
+  line-height: 1;
   color: #6c64ac;
 }
 
@@ -267,6 +267,7 @@ hero .title-hero p {
   font-size: 0.9em;
   font-weight: 300;
   margin: 15px 0 15px 0;
+  line-height: 1.3;
 }
 
 hero .title-hero .btns button {
@@ -302,18 +303,10 @@ intro {
   border-top: 3px solid #efeffc;
   padding: 5% 10%;
   background-color: #f1f6fe;
+  padding: 10%;
 }
 
-intro .first {
-  display: -ms-grid;
-  display: grid;
-  grid-auto-flow: dense;
-  -ms-grid-columns: (minmax(350px, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-}
-
-intro .first .text {
-  color: #8d7da0;
+intro .text {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -326,19 +319,49 @@ intro .first .text {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  color: #8d7da0;
 }
 
-intro .first .text h1 {
+intro .text h1 {
   padding-bottom: 10px;
   color: #6c64ac;
 }
 
-intro .first .graphic {
-  padding-right: 15px;
+intro .defi {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(350px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  margin-bottom: 10%;
 }
 
-intro .first .graphic img {
-  width: 85%;
+intro .defi .animaImgBottom {
+  position: relative;
+}
+
+intro .defi .animaImgBottom img {
+  position: absolute;
+  left: 20%;
+  bottom: -20%;
+  width: 60%;
+}
+
+intro .fraktal {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(350px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+}
+
+intro .fraktal .animaImgTop {
+  position: relative;
+}
+
+intro .fraktal .animaImgTop img {
+  position: absolute;
+  top: -10%;
+  left: 20%;
+  width: 60%;
 }
 
 benefits {
@@ -513,7 +536,7 @@ process .cards .card {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 210px;
+  width: 230px;
   text-align: center;
   -webkit-transition: 300ms ease-in-out;
   transition: 300ms ease-in-out;
@@ -650,6 +673,10 @@ footer .links ul li a {
   text-decoration: none;
 }
 
+footer .links ul li a:hover {
+  color: #8d7da0;
+}
+
 .copyright {
   width: 100%;
   padding: 10px;
@@ -662,7 +689,19 @@ footer .links ul li a {
   overflow-y: hidden;
 }
 
-@media only screen and (max-width: 786px) {
+@media only screen and (max-width: 768px) {
+  .nav .links ul {
+    display: none !important;
+  }
+  .nav {
+    padding: 5% !important;
+  }
+  #nav-icon {
+    display: block;
+  }
+  .title-hero {
+    text-align: center;
+  }
   hero {
     padding-top: 25%;
   }
@@ -671,6 +710,9 @@ footer .links ul li a {
   }
   hero .btns {
     margin-bottom: 15px;
+  }
+  hero .graphic .static {
+    width: 40%;
   }
   .nav .links ul {
     display: none !important;
@@ -685,8 +727,105 @@ footer .links ul li a {
     text-align: center;
   }
   intro {
-    padding: none;
-    margin: none;
+    text-align: center;
+  }
+  footer {
+    text-align: center;
+  }
+  footer .cta button {
+    margin-bottom: 15px;
+  }
+}
+
+@media (max-width: 575.98px) {
+  .nav .links ul {
+    display: none !important;
+  }
+  .nav {
+    padding: 5% !important;
+  }
+  #nav-icon {
+    display: block;
+  }
+  .title-hero {
+    text-align: center;
+  }
+  hero {
+    padding-top: 25%;
+  }
+  hero .title {
+    font-size: 1.5em;
+  }
+  hero .btns {
+    margin-bottom: 15px;
+  }
+  hero .graphic .static {
+    width: 40%;
+  }
+  .nav .links ul {
+    display: none !important;
+  }
+  .nav {
+    padding: 5% !important;
+  }
+  #nav-icon {
+    display: block;
+  }
+  .title-hero {
+    text-align: center;
+  }
+  intro {
+    padding: 45% 0;
+    text-align: center;
+  }
+  footer {
+    text-align: center;
+  }
+  footer .cta button {
+    margin-bottom: 15px;
+  }
+}
+
+@media (max-width: 699px) {
+  .nav .links ul {
+    display: none !important;
+  }
+  .nav {
+    padding: 5% !important;
+  }
+  #nav-icon {
+    display: block;
+  }
+  .title-hero {
+    text-align: center;
+  }
+  hero {
+    padding-top: 25%;
+  }
+  hero .title {
+    font-size: 1.5em;
+  }
+  hero .btns {
+    margin-bottom: 15px;
+  }
+  hero .graphic .static {
+    width: 40%;
+  }
+  .nav .links ul {
+    display: none !important;
+  }
+  .nav {
+    padding: 5% !important;
+  }
+  #nav-icon {
+    display: block;
+  }
+  .title-hero {
+    text-align: center;
+  }
+  intro {
+    padding: 45% 0;
+    text-align: center;
   }
   footer {
     text-align: center;
