--- a/style/style.scss
+++ b/style/style.scss
@@ -233,8 +233,8 @@ $darkBlue: #192057;
 
 hero {
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-	padding: 8% 10%;
+	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+	padding: 10% 10% 2%;
 
 	.graphic {
 		display: flex;
@@ -249,16 +249,15 @@ hero {
 		}
 		.static {
 			position: absolute;
-
-			width: 300px;
+			width: 20%;
 		}
 	}
 	.title-hero {
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
-		font-size: 2em;
-		line-height: 1.1;
+		font-size: 2.4em;
+		line-height: 1;
 		color: $blue;
 
 		p {
@@ -266,6 +265,7 @@ hero {
 			font-size: 0.9em;
 			font-weight: 300;
 			margin: 15px 0 15px 0;
+			line-height: 1.3;
 		}
 
 		.btns {
@@ -289,28 +289,44 @@ hero {
 intro {
 	@include section;
 	background-color: $lightBlue;
-
-	.first {
+	padding: 10%;
+	.text {
+		display: flex;
+		padding-left: 15px;
+		line-height: 1.5;
+		flex-direction: column;
+		justify-content: center;
+		color: $softBlue;
+		h1 {
+			padding-bottom: 10px;
+			color: $blue;
+		}
+	}
+	.defi {
 		display: grid;
-		grid-auto-flow: dense;
 		grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
 
-		.text {
-			color: $softBlue;
-			display: flex;
-			padding-left: 15px;
-			line-height: 1.5;
-			flex-direction: column;
-			justify-content: center;
-			h1 {
-				padding-bottom: 10px;
-				color: $blue;
+		margin-bottom: 10%;
+		.animaImgBottom {
+			position: relative;
+			img {
+				position: absolute;
+				left: 20%;
+				bottom: -20%;
+				width: 60%;
 			}
 		}
-		.graphic {
-			padding-right: 15px;
+	}
+	.fraktal {
+		display: grid;
+		grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+		.animaImgTop {
+			position: relative;
 			img {
-				width: 85%;
+				position: absolute;
+				top: -10%;
+				left: 20%;
+				width: 60%;
 			}
 		}
 	}
@@ -402,7 +418,7 @@ process {
 		.card {
 			@include card-style;
 			flex-direction: column;
-			width: 210px;
+			width: 230px;
 			text-align: center;
 			transition: 300ms ease-in-out;
 			&:hover {
@@ -488,9 +504,13 @@ footer {
 			list-style: none;
 			li {
 				padding: 5px 0;
+
 				a {
 					color: white;
 					text-decoration: none;
+					&:hover {
+						color: $softBlue;
+					}
 				}
 			}
 		}
@@ -509,7 +529,22 @@ footer {
 	overflow-y: hidden;
 }
 
-@media only screen and (max-width: 786px) {
+@media only screen and (max-width: 768px) {
+	.nav .links ul {
+		display: none !important;
+	}
+	.nav {
+		padding: 5% !important;
+	}
+
+	#nav-icon {
+		display: block;
+	}
+
+	.title-hero {
+		text-align: center;
+	}
+
 	hero {
 		padding-top: 25%;
 		.title {
@@ -517,6 +552,11 @@ footer {
 		}
 		.btns {
 			margin-bottom: 15px;
+		}
+		.graphic {
+			.static {
+				width: 40%;
+			}
 		}
 	}
 	.nav .links ul {
@@ -535,8 +575,127 @@ footer {
 	}
 
 	intro {
-		padding: none;
-		margin: none;
+		text-align: center;
+	}
+
+	footer {
+		text-align: center;
+		.cta {
+			button {
+				margin-bottom: 15px;
+			}
+		}
+	}
+}
+
+@media (max-width: 575.98px) {
+	.nav .links ul {
+		display: none !important;
+	}
+	.nav {
+		padding: 5% !important;
+	}
+
+	#nav-icon {
+		display: block;
+	}
+
+	.title-hero {
+		text-align: center;
+	}
+
+	hero {
+		padding-top: 25%;
+		.title {
+			font-size: 1.5em;
+		}
+		.btns {
+			margin-bottom: 15px;
+		}
+		.graphic {
+			.static {
+				width: 40%;
+			}
+		}
+	}
+	.nav .links ul {
+		display: none !important;
+	}
+	.nav {
+		padding: 5% !important;
+	}
+
+	#nav-icon {
+		display: block;
+	}
+
+	.title-hero {
+		text-align: center;
+	}
+
+	intro {
+		padding: 45% 0;
+		text-align: center;
+	}
+
+	footer {
+		text-align: center;
+		.cta {
+			button {
+				margin-bottom: 15px;
+			}
+		}
+	}
+}
+
+@media (max-width: 699px) {
+	.nav .links ul {
+		display: none !important;
+	}
+	.nav {
+		padding: 5% !important;
+	}
+
+	#nav-icon {
+		display: block;
+	}
+
+	.title-hero {
+		text-align: center;
+	}
+
+	hero {
+		padding-top: 25%;
+		.title {
+			font-size: 1.5em;
+		}
+		.btns {
+			margin-bottom: 15px;
+		}
+		.graphic {
+			.static {
+				width: 40%;
+			}
+		}
+	}
+	.nav .links ul {
+		display: none !important;
+	}
+	.nav {
+		padding: 5% !important;
+	}
+
+	#nav-icon {
+		display: block;
+	}
+
+	.title-hero {
+		text-align: center;
+	}
+
+	intro {
+		padding: 45% 0;
+		text-align: center;
 	}
 
 	footer {
