--- a/style/style.css
+++ b/style/style.css
@@ -218,6 +218,7 @@ hero {
   -ms-grid-columns: (minmax(300px, 1fr))[auto-fit];
       grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   padding: 10% 10% 2%;
+  height: 85vh;
 }
 
 hero .graphic {
@@ -303,7 +304,6 @@ intro {
   border-top: 3px solid #efeffc;
   padding: 5% 10%;
   background-color: #f1f6fe;
-  padding: 10%;
 }
 
 intro .text {
@@ -327,25 +327,6 @@ intro .text h1 {
   color: #6c64ac;
 }
 
-intro .defi {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (minmax(350px, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-  margin-bottom: 10%;
-}
-
-intro .defi .animaImgBottom {
-  position: relative;
-}
-
-intro .defi .animaImgBottom img {
-  position: absolute;
-  left: 20%;
-  bottom: -20%;
-  width: 60%;
-}
-
 intro .fraktal {
   display: -ms-grid;
   display: grid;
@@ -359,7 +340,7 @@ intro .fraktal .animaImgTop {
 
 intro .fraktal .animaImgTop img {
   position: absolute;
-  top: -10%;
+  top: -40%;
   left: 20%;
   width: 60%;
 }
